# P7-log-wrap

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
logger/: logger.cpp  logger.h  logger.h.autosave
